# uri-projecteuler

./: .gitignore  LICENSE  README.md  pylama.ini  pyproject.toml
exercicios/: ex1004.py  ex1008.py  ex1009.py  ex1010.py  ex1015.py  ex1016.py  ex1017.py  ex1019.py  ex1023.py  ex1024.py  ex1027.py  ex1028.py  ex1030.py  ex1034.py  ex1039.py
project_euler/: even_fibonacci_numbers.py  ex10_summation_of_primes.py  ex11_largest_product_in_a_grid.py  ex12_highly_div_triangular_num.py  ex13_large_sum.py  ex14_longest_collatz_sequence.py  ex15_lattice_path.py  ex16_power_digit_sum.py  ex17_number_letter_counts.py  ex18_maximum_path_sum.py  ex19_counting_sundays.py  ex1_multiples_of_3_and_5.py  ex20_factorial_digit_sum.py  ex21_amicable_numbers.py  ex22_names_scores.py  ex23_non-abundant_sums.py  ex24_lexicographic_permutations.py  ex25_1000digit_fib_number.py  ex26_reciprocal_cycles.py  ex27_quadratic_primes.py  ex28_number_spiral_diagonals.py  ex29_distinct_powers.py  ex2_even_fibonacci_numbers.py  ex30_digit_fifth_power.py  ex31_coin_sums.py  ex32_pandigital_products.py  ex33_digit_cancelling fractions.py  ex34_digit_factorials.py  ex35_circular_primes.py  ex37_truncable_primes.py  ex38.py  ex39.py  ex3_largest_prime_factor.py  ex40.py  ex41.py  ex48_self_powers.py  ex4_largest_plindrome_product.py  ex50_consecutive_prime_sum.py  ex5_smallest_mulptiple.py  ex6_sum_square_difference.py  (+3 more)
test/: test_1001.py  test_1002.py  test_1003.py  test_1004.py  test_1005.py  test_1006.py  test_1007.py  test_1008.py  test_1009.py  test_1010.py  test_1011.py  test_1012.py  test_1013.py  (+18 more)
(+26 files in other folders)
