[tool.poetry]
name = "uri-projecteuler"
version = "0.1.0"
description = "exercicios"
authors = ["Ralph Ribeiro <ralph_ribeiro@msn.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.1"
ipython = "^7.23.1"

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"
radon = "^4.5.0"
black = {version = "^21.5b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
