[tool.poetry]
name = "uri-projecteuler"
version = "0.1.0"
description = ""
authors = ["Ralph Ribeiro <ralph_ribeiro@msn.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
